--- a/shiroi_ame_thing.css
+++ b/shiroi_ame_thing.css
@@ -1,7 +1,7 @@
 @import url(https://capnkitten.github.io/BetterDiscord/Themes/Translucence/css/source.css);
 
 :root {
-	--app-bg: url(https://cdn.discordapp.com/attachments/519663162216415234/1130261261213503648/wacky_inflatable.png);
+	--app-bg: url(https://cdn.discordapp.com/attachments/889984160935059486/1133390401873653780/Capture12.PNG);
 	--app-blur: 0px;
 	--app-margin: 0px;
 	--app-radius: 8px; /*	-	*/
